--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-.sticky-top {
+/* .sticky-top {
   top: 4em !important;
 }
 
@@ -10,4 +10,4 @@
   .fixed-top {
     position: static !important;
   }
-}
+} */
