--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
   font-weight: 400;
   /* text-shadow: 2px 2px black; */
 }
-.modal {
+/* .modal {
   height: 100% !important ;
   width: 75% !important ;
-}
+} */
