--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,11 +5,11 @@
 .card .card-content {
   padding: 10px;
 }
-.cont-main {
-  margin-top: 30px;
-}
 .row-grid {
   display: grid;
   justify-content: center;
   align-items: center;
+}
+.margin-top {
+  margin-top: 30px;
 }
