--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,8 +10,11 @@
   justify-content: center;
   align-items: center;
 }
-.margin-top {
+.mt {
   margin-top: 30px;
+}
+.mr {
+  margin-right: 3rem;
 }
 .grid-style {
   display: flex;
