--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,6 +37,14 @@
 .row {
   margin-bottom: 5px;
 }
+.loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
 @media (max-width: 700px) {
   .form-container {
     width: 100%;
