--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,10 +28,16 @@
   grid-gap: 5px;
 }
 .form-container {
-  width: 60%;
-  border-radius: 25px;
+  width: 70%;
+  padding: 10px 10px 10px 10px;
+  border-style: solid;
+  border-width: 4px 4px 4px 4px;
+  border-color: #1976d2;
+  border-radius: 7px 7px 7px 7px;
+  margin-bottom: 30px;
+  /* border-radius: 25px;
   border: 1px solid black;
-  padding: 20px;
+  padding: 20px; */
 }
 .auth-container {
   width: 40%;
