--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,6 +57,10 @@
   bottom: 0;
   margin: auto;
 }
+.filter {
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
 @media (max-width: 700px) {
   .form-container,
   .auth-container {
